--- a/templates/toppage.html
+++ b/templates/toppage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Health maintainance</title>
+    <title>SCFM Health Maintainance</title>
     <!-- <link rel="stylesheet" href="../static/style.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static',filename = 'top.css')}}">
@@ -15,9 +15,9 @@
   <body>
     <div class="jumbotron jumbotron-fluid explanation">
           <div class="container">
-            <h1 class="thema">Recommendation of Evidence Based Healthmaitainance in Japan</h1>
+            <h1 class="thema">Health Maintainance Recommendation App in Japan<p>presented by SCFM</p></h1>
             <div class="statement">
-              <p>滋賀家庭医療学センター監修の予防医療・ヘルスメンテナンスのサイトです。
+              <p>滋賀家庭医療学センター監修の予防医療・ヘルスメンテナンスのアプケーションを提供するサイトです。
               <p>予防医療・ヘルスメンテナンスは、健康を維持・増進するために医療者が患者に対して積極的に行う推奨・勧奨のことであり、スクリーニング、カウンセリング、予防接種、予防的内服に分類されます。</p>
               <p>どのような項目が推奨されるかについては、米国予防医学専門委員会(USPSTF)のホームページ、日本プライマリケア連合学会による「根拠に基づく予防医療推奨サイト」、国立がん研究センターの提供する「科学的根拠に基づくがん検診推進のページ」などが参考になりますが、米国と日本における考え方や検査体制の違いもあり、実際にどのような検査を患者に推奨するか悩まれた方は多いと思います。</p>
               <p>また、実際に予防医療・ヘルスメンテナンスを患者に適用するためには、どこでその検査が受けられるのか、いつその検査が受けられるのか、費用はいくらかかるのかなど、周囲の検査・医療リソースや日本における公的補助の体制についても把握する必要があります。</p>
