--- a/templates/index.html
+++ b/templates/index.html
@@ -23,17 +23,17 @@
         <div class="form-row">
           <div class="form-group col-sm-12">
             <label for="age" class="item">Age(years)</label>
-            <input type="text" class="form-control" name="age" required pattern="[0-9]{1,3}" placeholder="Please use half-widths English numbers">
+            <input type="text" class="form-control" name="age" required pattern="[1-9]?[0-9]|100" placeholder="Please use half-widths English numbers">
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-sm-6">
             <label for="height" class="item">Height(cm)</label>
-            <input type="text" class="form-control" name="height" required pattern="[0-9]{1,3}" placeholder="Please use half-widths numbers">
+            <input type="text" class="form-control" name="height" required pattern="[1-9]?[0-9]|100" placeholder="Please use half-widths numbers">
           </div>
           <div class="form-group col-sm-6">
             <label for="age" class="item">Weight(kg)</label>
-            <input type="text" class="form-control" name="weight" required pattern="[0-9]{1,3}" placeholder="Please use half-widths numbers">
+            <input type="text" class="form-control" name="weight" required pattern="[1-9]?[0-9]|100" placeholder="Please use half-widths numbers">
           </div>
          </div>
 
