--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:url" content="https://scfm-hm.appspot.com"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content=“SCFM Health Maintainance”/>
+    <meta property="og:image" content="https://scfm-hm.appspot.com/static/images/OGP.jpg"/>
+    <meta property="og:description" content=“滋賀家庭医療学センター(SCFM)によるヘルスメンテナンスのアプリケーションです”/>
     <title>SCFM Health Maintainance</title>
     <!-- <link rel="stylesheet" href="../static/style.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
