--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:url" content="https://scfm-hm.appspot.com"/>
+    <meta property="og:url" content="https://scfm-hm.appspot.com/index"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content=“SCFM Health Maintainance”/>
+    <meta property="og:title" content="SCFM Health Maintainance App"/>
     <meta property="og:image" content="https://scfm-hm.appspot.com/static/images/OGP.jpg"/>
     <meta property="og:description" content=“滋賀家庭医療学センター(SCFM)によるヘルスメンテナンスのアプリケーションです”/>
     <title>SCFM Health Maintainance</title>
@@ -28,17 +28,17 @@
         <div class="form-row">
           <div class="form-group col-sm-12">
             <label for="age" class="item">Age(years)</label>
-            <input type="text" class="form-control" name="age" required pattern="[1-9]?[0-9]|100" placeholder="Please use half-widths English numbers">
+            <input type="text" class="form-control" name="age" pattern="[0-9]{1,3}" placeholder="Please use half-widths English numbers" required/>
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-sm-6">
             <label for="height" class="item">Height(cm)</label>
-            <input type="text" class="form-control" name="height" required pattern="[1-9]?[0-9]|100" placeholder="Please use half-widths numbers">
+            <input type="text" class="form-control" name="height" pattern="[1-9][0-9]*" placeholder="Please use half-widths numbers" required/>
           </div>
           <div class="form-group col-sm-6">
             <label for="age" class="item">Weight(kg)</label>
-            <input type="text" class="form-control" name="weight" required pattern="[1-9]?[0-9]|100" placeholder="Please use half-widths numbers">
+            <input type="text" class="form-control" name="weight" pattern="[1-9][0-9]*" placeholder="Please use half-widths numbers" required/>
           </div>
          </div>
 
@@ -70,7 +70,7 @@
            </div>
            <div class="col-sm-6">
              <div class="form-check pl-0">
-               <input class="form-check-input button-item" id="yes1" type="radio" name="pregnancy" value="1" required />
+               <input class="form-check-input button-item" id="yes1" type="radio" name="pregnancy" value="1" required/>
                <label for="yes1" class="form-check-label radio">Yes</label>
              </div>
            </div>
