--- a/templates/result.html
+++ b/templates/result.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <!-- viewportを指定する。指定するだけでもスマホでそれなりの表示になる。 -->
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>SCFM Health Maintainance</title>
+    <title>SCFM Health Maintenance</title>
     <!-- <link rel="stylesheet" href="../static/style.css"> -->
     {# Bootstrapの設定ファイルを一式読み込みする。 #}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -20,13 +20,13 @@
   <body>
     <div class="header">
       <div class="jumbotron jumbotron-fluid jumbotron-header">
-        <h1>Recommended Health Maintainance</h1>
+        <h1>Recommended Health Maintenance</h1>
         <h1>for Our Patients</h1>
       </div>
     </div>
 
     <div class="main-result">
-      <p class="thema">These health maintainance are recommended for your patient</p>
+      <p class="thema">These health maintenance are recommended for your patient</p>
       <div class="row">
         <div class="col-sm-12 caution">
           <p>※以下の点にご注意ください。</p>
