--- a/templates/toppage.html
+++ b/templates/toppage.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:url" content="https://scfm-hm.appspot.com"/>
+    <meta property="og:url" content="https://scfm-hm.appspot.com/"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content=“SCFM Health Maintainance”/>
+    <meta property="og:title" content="SCFM Health Maintenance App"/>
     <meta property="og:image" content="https://scfm-hm.appspot.com/static/images/OGP.jpg"/>
     <meta property="og:description" content=“滋賀家庭医療学センター(SCFM)によるヘルスメンテナンスのアプリケーションです”/>
     <title>SCFM Health Maintainance</title>
@@ -20,7 +20,7 @@
   <body>
     <div class="jumbotron jumbotron-fluid explanation">
           <div class="container">
-            <h1 class="thema">Health Maintainance Recommendation App in Japan<p>presented by SCFM</p></h1>
+            <h1 class="thema">Health Maintenance Recommendation App in Japan<p>presented by SCFM</p></h1>
             <div class="statement">
               <p>滋賀家庭医療学センター監修の予防医療・ヘルスメンテナンスのアプリケーションを提供するサイトです。
               <p>予防医療・ヘルスメンテナンスは、健康を維持・増進するために医療者が患者に対して積極的に行う推奨・勧奨のことであり、スクリーニング、カウンセリング、予防接種、予防的内服に分類されます。</p>
