--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:url" content="https://scfm-hm.appspot.com/index"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="SCFM Health Maintainance App"/>
+    <meta property="og:title" content="SCFM Health Maintenance App"/>
     <meta property="og:image" content="https://scfm-hm.appspot.com/static/images/OGP.jpg"/>
     <meta property="og:description" content=“滋賀家庭医療学センター(SCFM)によるヘルスメンテナンスのアプリケーションです”/>
-    <title>SCFM Health Maintainance</title>
+    <title>SCFM Health Maintenance</title>
     <!-- <link rel="stylesheet" href="../static/style.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static',filename = 'index.css')}}">
@@ -17,7 +17,7 @@
   <body>
     <div class="header">
       <div class="jumbotron jumbotron-fluid jumbotron-header">
-        <h1>Recommended Health Maintainance</h1>
+        <h1>Recommended Health Maintenance</h1>
         <h1>for Our Patients</h1>
       </div>
     </div>
