--- a/templates/result.html
+++ b/templates/result.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136864187-2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-136864187-2');
+    </script>
+
     <meta charset="utf-8">
     <!-- viewportを指定する。指定するだけでもスマホでそれなりの表示になる。 -->
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -39,8 +48,8 @@
 
       <dl>
       {% for i in result %}
-        <dt><h4>{{ i.split('fff')[0] }}</h4></dt>
-        <dd>{{ i.split('fff')[1] }}</dd>
+        <dt><h4>{{ i.split('\n')[0] }}</h4></dt>
+        <dd>{{ i.split('\n')[1] }}</dd>
         <div class="row">
         <div class="col-12">
             <p style="text-align: center;">
@@ -50,7 +59,10 @@
             </p>
             <div class="collapse" id="collapseExample-{{loop.index0}}">
               <div class="card card-body font-small">
-                {{ i.split('fff')[2] }}
+                {% set s = i.split('\n')[2] | string() %}
+                {% for sentence in s.split('<br>') %}
+                  <li>{{ sentence }}</li>
+                {% endfor %}
               </div>
             </div>
           </div>
